; ModuleID = '/home/carl/AnghaBench/linux/drivers/tty/serial/extr_sunzilog.c_sunzilog_kbdms_receive_chars.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/tty/serial/extr_sunzilog.c_sunzilog_kbdms_receive_chars.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uart_sunzilog_port = type { i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.uart_sunzilog_port*, i8, i32)* @sunzilog_kbdms_receive_chars to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sunzilog_kbdms_receive_chars(%struct.uart_sunzilog_port* %0, i8 zeroext %1, i32 %2) #0 {
  %4 = alloca %struct.uart_sunzilog_port*, align 8
  %5 = alloca i8, align 1
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.uart_sunzilog_port* %0, %struct.uart_sunzilog_port** %4, align 8
  store i8 %1, i8* %5, align 1
  store i32 %2, i32* %6, align 4
  %8 = load %struct.uart_sunzilog_port*, %struct.uart_sunzilog_port** %4, align 8
  %9 = call i64 @ZS_IS_KEYB(%struct.uart_sunzilog_port* %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %3
  br label %28

12:                                               ; preds = %3
  %13 = load %struct.uart_sunzilog_port*, %struct.uart_sunzilog_port** %4, align 8
  %14 = call i64 @ZS_IS_MOUSE(%struct.uart_sunzilog_port* %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %27

16:                                               ; preds = %12
  %17 = load i8, i8* %5, align 1
  %18 = load i32, i32* %6, align 4
  %19 = call i32 @suncore_mouse_baud_detection(i8 zeroext %17, i32 %18)
  store i32 %19, i32* %7, align 4
  %20 = load i32, i32* %7, align 4
  switch i32 %20, label %26 [
    i32 2, label %21
    i32 1, label %24
    i32 0, label %25
  ]

21:                                               ; preds = %16
  %22 = load %struct.uart_sunzilog_port*, %struct.uart_sunzilog_port** %4, align 8
  %23 = call i32 @sunzilog_change_mouse_baud(%struct.uart_sunzilog_port* %22)
  br label %24

24:                                               ; preds = %16, %21
  br label %26

25:                                               ; preds = %16
  br label %26

26:                                               ; preds = %16, %25, %24
  br label %27

27:                                               ; preds = %26, %12
  br label %28

28:                                               ; preds = %27, %11
  ret void
}

declare dso_local i64 @ZS_IS_KEYB(%struct.uart_sunzilog_port*) #1

declare dso_local i64 @ZS_IS_MOUSE(%struct.uart_sunzilog_port*) #1

declare dso_local i32 @suncore_mouse_baud_detection(i8 zeroext, i32) #1

declare dso_local i32 @sunzilog_change_mouse_baud(%struct.uart_sunzilog_port*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
